Fixed horizontal scroll and built about me page

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,6 @@
 h1,
 h2,
+h3,
 p {
   font-family: "Nunito", sans-serif;
 }
@@ -8,6 +9,12 @@ h1 {
   font-weight: bold;
 }
 h2 {
+  font-size: 64px;
+  font-weight: bold;
+  line-height: 35px;
+}
+
+h3 {
   font-size: 24px;
   font-weight: bold;
   line-height: 35px;
@@ -15,7 +22,6 @@ h2 {
 
 img {
   border-radius: 12px;
-  box-shadow: ;
 }
 .hero {
   background-image: url("/images/hero-back.jpg");
@@ -29,19 +35,47 @@ img {
 .image-caption {
   font-size: 28;
   font-weight: bold;
-  color: #272142;
 }
 
-.homepage-image-container {width: 100%; margin-right: auto; margin-left: auto;}
+.homepage-image-container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
 
-.homepage-image {width: 560px;
-height: 250px;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, .25);}
-
-@media (max-width: 900px) {
+.homepage-image {
+  width: 560px;
+  height: 250px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.about-me-header {
+  text-align: center;
+  color: #272142;
+}
+.headshot {
+  justify-content: right;
+  max-height: 450px;
+}
+.favorite-mobs {
+  text-align: center;
+  color: #272142;
+}
+.about-image-caption {
+  font-size: 24;
+  font-weight: bold;
+}
+.about-me {
+  color: #272142;
+}
+@media (max-width: 576px) {
   h1 {
     font-size: 44px;
     text-align: center;
   }
+  h3 {
+    font-size: 18px;
+  }
   h2 {
-  font-size: 18px;}
+    font-size: 18px;
+  }
+}
